package com.debanshu777.caraml.features.chat.domain

enum class GenerationMode {
    Text,
    Image,
    Video,
}
